[package]
name = "keep-a-changelog"
version = "0.1.0"
description = "A library for parsing and manipulating CHANGELOG.md files that use the Keep A Changelog format. oscarotero/keep-a-changelog Rust-adaptation"
edition = "2021"

[dependencies]
eyre = "0.6"
serde = { version = "1", features = ["derive"] }
derive_builder = "0.20"
derive-getters = "0.3"
chrono = "0.4"
regex = "1"
semver = "1"
